abstract and introduction

--- a/literature/literature.bib
+++ b/literature/literature.bib
@@ -340,6 +340,24 @@
   Timestamp                = {2014.11.09}
 }
 
+@InProceedings{Cyganiak2010,
+  Title                    = {Semantic Statistics: Bringing Together SDMX and SCOVO.},
+  Author                   = {Cyganiak, Richard and Field, Simon and Gregory, Arofan and Halb, Wolfgang and Tennison, Jeni},
+  Booktitle                = {Proceedings of the WWW 2010 Workshop on Linked Data on the Web},
+  Year                     = {2010},
+  Editor                   = {Bizer, Christian and Heath, Tom and Berners-Lee, Tim and Hausenblas, Michael},
+  Series                   = {CEUR Workshop Proceedings},
+  Volume                   = {628},
+
+  Added-at                 = {2011-09-20T00:00:00.000+0200},
+  Biburl                   = {http://www.bibsonomy.org/bibtex/2033ffff6bf7dc4d27bc3f77d8e0904df/dblp},
+  Ee                       = {http://ceur-ws.org/Vol-628/ldow2010_paper03.pdf},
+  Interhash                = {f6a7a12032f436b21d14ea5af9bc4761},
+  Intrahash                = {033ffff6bf7dc4d27bc3f77d8e0904df},
+  Timestamp                = {2011-09-20T00:00:00.000+0200},
+  Url                      = {http://ceur-ws.org/Vol-628/ldow2010_paper03.pdf}
+}
+
 @TechReport{CyganiakReynolds2014,
   Title                    = {The RDF Data Cube Vocabulary},
   Author                   = {Cyganiak,Richard and Reynolds,Dave},
@@ -721,6 +739,20 @@
   Publisher                = {Springer},
   Year                     = {2006},
   Pages                    = {292--297}
+}
+
+@Article{Vardigan2008,
+  Title                    = {Data Documentation Initiative: Towards a Standard for the Social Sciences},
+  Author                   = {Mary Vardigan and Pascal Heus and Wendy Thomas},
+  Journal                  = {International Journal of Digital Curation},
+  Year                     = {2008},
+  Number                   = {1},
+  Pages                    = {107-113},
+  Volume                   = {3},
+
+  Abstract                 = {The Data Documentation Initiative (DDI) is an emerging metadata standard for the social sciences. The DDI is in active use by many data specialists and archivists, but researchers themselves have been slow to recognize the benefits of the standards approach to metadata. This paper outlines how the DDI has evolved since its inception in 1995 and discusses ways to broaden its impact in the social science research community.},
+  Doi                      = {doi:10.2218/ijdc.v3i1.45},
+  Url                      = {http://www.ijdc.net/index.php/ijdc/article/view/66}
 }
 
 @Article{VomprasGregoryBoschWackerow2014,
