--- a/paper/paper6/paper6.tex
+++ b/paper/paper6/paper6.tex
@@ -54,7 +54,7 @@
 %% This TITLE has a note reference (titleNote) whose 
 %% contants is specified about 10 lines later.
 
-\title{Modeling and Validation of Metadata on \\ Highly-Complex Person-Level Data Sets in RDF}
+\title{}
 
 %% Here are the three AUTHORS.  Note the separating commas
 %% with no and.
