--- a/paper/paper7/paper7-appendix.tex
+++ b/paper/paper7/paper7-appendix.tex
@@ -196,7 +196,7 @@ University of Mannheim, Germany \\
 \maketitle              % typeset the title of the contribution
 
 \begin{abstract}
-
+...
 
 
 \keywords{RDF Validation, RDF Constraints, DDI-RDF Discovery Vocabulary, Disco, RDF Data Cube Vocabulary, Linked Data, Semantic Web}
@@ -204,22 +204,33 @@ University of Mannheim, Germany \\
 
 \section{Introduction}
 
+Bosch and Eckert initiated a comprehensive database\footnote{Publicly available at \url{http://purl.org/net/rdf-validation}.} on RDF validation requirements to collect case studies, use cases, and requirements \cite{BoschEckert2014}. 
+It is continuously updated and used to evaluate and to compare various existing solutions for RDF constraint formulation and validation. 
+Requirements are classified to provide a high-level view on different solutions and to facilitate a better understanding of the problem domain.
+Bosch et al. identified in total 74 requirements to formulate RDF constraints; each of them corresponding to a constraint type. 
+They recently published a technical report\footnote{Available at: \url{http://arxiv.org/abs/1501.03933}} in which they explain each requirement (constraint type) in detail and give examples for each (represented by listed constraint languages) \cite{BoschNolleAcarEckert2015}.
+
 \section{Validation of Metadata on Person-Level Data Sets}
 
-\textcolor{blue}{multiple validation levels}
-
+We state at least one Disco constraint for the majority of the constraint types.
 Where appropriate constraint types are related to complementary requirements of the RDF validation requirements database.
-
-We state one Disco constraint for each constraint type.
-
-Constraint types marked with an asterisk can be used as an OWL 2 axiom.
-Thus, reasoners may be used to infer implicit triples resolving constraint violations causing when these constraints are validated.
-\textcolor{blue}{example}
+Constraint types marked with an asterisk can be used as OWL 2 axioms.
+Thus, reasoners may be used to infer implicit triples resolving constraint violations caused when these constraints are validated.
 
 \subsection{Data Model Consistency}
 
 Is the data consistent with the intended semantics of the data model?
 Ensures the integrity of the data according to the data model.
+
+\subsection{Subsumption*}
+
+A subclass axiom ({\em concept inclusion} in DL) states that the class C1 is a subclass of the class C2 - C1 is more specific than C2\footnote{{\em R-100-SUBSUMPTION}}.
+\textbf{{\em DISCO-C-XX:}} 
+All {\em disco:Universe}s must also be {\em skos:Concept}s.
+
+\begin{DL}
+Universe $\sqsubseteq$ Concept
+\end{DL}
 
 \subsection{Unqualified Cardinality Restrictions}
 
@@ -317,16 +328,6 @@ Only {\em disco:Question}s can have {\em disco:questionText} relationships to li
 
 \begin{DL}
 $\neg$Question $\sqsubseteq$ $\neg\exists$ questionText.langString
-\end{DL}
-
-\subsection{Subsumption*}
-
-A subclass axiom ({\em concept inclusion} in DL) states that the class C1 is a subclass of the class C2 - C1 is more specific than C2\footnote{{\em R-100-SUBSUMPTION}}.
-\textbf{{\em DISCO-C-XX:}} 
-All {\em disco:Universe}s must also be {\em skos:Concept}s.
-
-\begin{DL}
-Universe $\sqsubseteq$ Concept
 \end{DL}
 
 \subsection{Class Equivalence*}
