--- a/paper/paper7/paper7-appendix.tex
+++ b/paper/paper7/paper7-appendix.tex
@@ -220,17 +220,233 @@ Thus, reasoners may be used to infer implicit triples resolving constraint viola
 \subsection{Data Model Consistency}
 
 Is the data consistent with the intended semantics of the data model?
-Ensures the integrity of the data according to the data model.
+Such validation rules ensure the integrity of the data according to the data model.
 
 \subsection{Subsumption*}
 
-A subclass axiom ({\em concept inclusion} in DL) states that the class C1 is a subclass of the class C2 - C1 is more specific than C2\footnote{{\em R-100-SUBSUMPTION}}.
-\textbf{{\em DISCO-C-XX:}} 
-All {\em disco:Universe}s must also be {\em skos:Concept}s.
+A \emph{subclass axiom}\footnote{{\em R-100-SUBSUMPTION}} ({\em concept inclusion} in DL) states that the class \emph{C1} is a subclass of the class \emph{C2} - \emph{C1} is more specific than \emph{C2}, 
+i.e. each resources of the class \emph{C1} must also be part of the class extension of \emph{C2}.
+
+\begin{itemize}
+	\item \textbf{{\em DISCO-C-XX:}} 
+All {\em disco:Universe}s must also be {\em skos:Concept}s:
 
 \begin{DL}
 Universe $\sqsubseteq$ Concept
 \end{DL}
+\end{itemize}
+
+\subsection{Class Equivalence*}
+
+{\em Class Equivalence}\footnote{{\em R-3-EQUIVALENT-CLASSES}} asserts that two concepts have the same instances.
+While synonyms are an obvious example of equivalent concepts, in practice one more
+often uses concept equivalence to give a name to complex expressions \cite{Kroetzsch2012}.
+Concept equivalence is indeed subsumption from left and right ($A \sqsubseteq B$ and $B \sqsubseteq A$ implies $A \equiv B$).
+
+\begin{itemize}
+	\item \textbf{{\em DISCO-C-XX:}}
+All {\em sio:SIO\_000367} resources must also be {\em disco:Variable}s:
+
+\begin{DL}
+Variable $\equiv$ SIO\_000367
+\end{DL}
+
+The Semanticscience Integrated Ontology (SIO)\footnote{https://code.google.com/p/semanticscience/wiki/SIO} provides a simple, integrated ontology of types and relations for rich description of objects, processes and their attributes.
+{\em sio:SIO\_000367} is a variable defined as a value that may change within the scope of a given problem or set of operations.
+Thus, {\em sio:SIO\_000367} is equivalent to {\em disco:Variable}.
+\end{itemize}
+
+\subsection{Sub Properties*}
+
+{\em Sub Properties}\footnote{\emph{R-54-SUB-OBJECT-PROPERTIES}, \emph{R-54-SUB-DATA-PROPERTIES}} state that the property \emph{P1} is a sub property of the property \emph{P2} - that is, if an individual \emph{x} is connected by \emph{P1} to an individual or a literal \emph{y}, then \emph{x} is also connected by \emph{P2} to \emph{y}. 
+
+\begin{itemize}
+	\item \textbf{{\em DISCO-C-XX:}}
+If an individual \emph{x} is connected by {\em disco:fundedBy} to an individual \emph{y}, then \emph{x} is also connected by {\em dcterms:contributor} to \emph{y}. 
+
+\begin{DL}
+fundedBy $\sqsubseteq$ contributor 
+\end{DL}
+\end{itemize}
+
+\subsection{Property Domains*}
+
+{\em Property Domains}\footnote{{\em R-25-OBJECT-PROPERTY-DOMAIN}, {\em R-26-DATA-PROPERTY-DOMAIN}} ({\em domain restrictions on roles} in DL) restrict the domain of object and data properties.
+The purpose is to declare that a given property is associated with a class. 
+In OO terms this is the declaration of a member, field, attribute or association. 
+$\exists R. \top \sqsubseteq C$ is the object property restriction where $R$ is the object property (role) whose domain is restricted to concept $C$.
+{\em Property Domain} constraints are defined for each \emph{Disco} object and data property.
+
+\begin{itemize}
+	\item \textbf{{\em DISCO-C-XX:}} 
+Only {\em disco:Question}s can have {\em disco:responseDomain} relationships.
+
+\begin{DL}
+$\exists$ responseDomain.$\top$ $\sqsubseteq$ Question 
+\end{DL}
+\end{itemize}
+
+\subsection{Property Ranges*}
+
+{\em Property Ranges}\footnote{{\em R-28-OBJECT-PROPERTY-RANGE}, {\em R-35-DATA-PROPERTY-RANGE}} ({\em range restrictions on roles} in DL) restrict the range of object and data properties.
+$\top \sqsubseteq \forall R . C$ is the range restriction to the object property $R$ (restricted by the concept $C$). 
+
+\begin{itemize}
+	\item \textbf{{\em DISCO-C-XX:}} 
+{\em disco:caseQuantity} relationships can only point to literals of the datatype {\em xsd:nonNegativeInteger}.
+
+\begin{DL}
+$\top$ $\sqsubseteq$ $\forall$ caseQuantity.nonNegativeInteger \\
+\end{DL}
+\end{itemize}
+
+\subsection{Inverse Object Properties*}
+
+\subsection{Symmetric Object Properties*}
+
+\subsection{Asymmetric Object Properties*}
+
+A property is asymmetric\footnote{{\em R-62-ASYMMETRIC-OBJECT-PROPERTIES}} if it is disjoint from its own inverse \cite{Kroetzsch2012}.
+An object property asymmetry axiom states that the object property \emph{OP} is asymmetric - that is, if an individual \emph{x} is connected by \emph{OP} to an individual \emph{y}, then \emph{y} cannot be connected by \emph{OP} to \emph{x}. 
+
+\begin{itemize}
+	\item \textbf{{\em DISCO-C-XX:}} 
+A {\em disco:Variable} may be based on a {\em disco:RepresentedVariable}.
+A {\em disco:RepresentedVariable}, however, cannot be based on a {\em disco:Variable}.
+This is a kind of mistake which may occur as a semantically equivalent object property for the other direction may also be possible ({\em disco:basisOf}).
+
+\begin{DL}
+$basedOn \sqcap basedOn^{-} \sqsubseteq \bot$ 
+\end{DL}
+\end{itemize}
+
+\subsection{Reflexive Object Properties*}
+
+\emph{Reflexive Object Properties}\footnote{\emph{R-59-REFLEXIVE-OBJECT-PROPERTIES}} (\emph{reflexive roles}, \emph{global reflexivity} in DL) can be expressed by imposing local reflexivity on the top concept \cite{Kroetzsch2012}.
+
+\subsection{Irreflexive Object Properties*}
+
+An object property is irreflexive\footnote{\emph{R-60-IRREFLEXIVE-OBJECT-PROPERTIES}} (\emph{irreflexive role} in DL) if it is never locally reflexive \cite{Kroetzsch2012}.
+An object property irreflexivity axiom \emph{IrreflexiveObjectProperty( OPE )} states that the object property expression \emph{OPE} is irreflexive - that is, no individual is connected by \emph{OPE} to itself. 
+In \emph{Disco}, every object property is irreflexive.
+
+\begin{itemize}
+  \item \textbf{{\em DISCO-C-XX:}}
+Within the Disco context, no individual is connected by the object property {\em instrument} to itself
+
+\begin{DL}
+$\top$ $\sqsubseteq$ $\neg$ $\exists  instrument . Self$ 
+\end{DL}
+\end{itemize}
+
+\subsection{Class-Specific Irreflexive Object Properties*}
+
+A property is \emph{irreflexive} if it is never locally reflexive \cite{Kroetzsch2012}.
+An object property irreflexivity axiom states that the object property \emph{OP} is irreflexive - that is, no individual is connected by \emph{OP} to itself.
+\emph{Class-Specific Irreflexive Object Properties} are object properties which are irreflexive within a given context, e.g. a class. 
+
+\begin{itemize}
+  \item \textbf{{\em DISCO-C-XX:}}
+Within the Disco context, {\em skos:Concept}s cannot be related via the object property {\em skos:boader} to themselves
+
+\begin{DL}
+Concept $\sqsubseteq$ $\neg$$\exists$ broader.Self. 
+\end{DL}
+
+	\item \textbf{{\em DISCO-C-XX:}}
+Within the Disco context, {\em skos:Concept}s cannot be related via the object property {\em skos:narrower} to themselves. 
+
+\begin{DL}
+Concept $\sqsubseteq$ $\neg$$\exists$ narrower.Self. 
+\end{DL}
+\end{itemize}
+
+\subsection{Disjoint Properties}
+
+A \emph{disjoint properties axiom}\footnote{\emph{R-9-DISJOINT-PROPERTIES}} states that all of the properties are pairwise disjoint; 
+that is, no individual \emph{x} can be connected to an individual \emph{y} by these properties. 
+
+\subsection{Disjoint Classes}
+
+{\em Disjoint Classes}\footnote{{\em R-7-DISJOINT-CLASSES}} state that all of the classes are pairwise disjoint; 
+that is, no individual can be at the same time an instance of these disjoint classes.
+
+\begin{itemize}
+	\item \textbf{{\em DISCO-C-XX:}} 
+All \emph{Disco} classes are defined to be pairwise disjoint.
+The following DL statements holds for each pair of Disco classes:
+
+\begin{DL}
+Study $\sqcap$ Variable $\sqsubseteq$ $\perp$\\
+\end{DL}
+\end{itemize}
+
+\subsection{Context-Specific Property Groups}
+
+The \emph{Context-Specific Property Groups}\footnote{\emph{R-66-PROPERTY-GROUPS}} constraint groups data and object properties within a context (e.g. a class).
+
+\subsection{Context-Specific Inclusive OR of Properties}
+
+\subsection{Context-Specific Inclusive OR of Property Groups}
+
+\subsection{Recursive Queries}
+
+\subsection{Individual Inequality}
+
+\subsection{Equivalent Properties*}
+
+\subsection{Property Assertions}
+
+\subsection{Data Property Facets}
+
+For datatype properties it should be possible to declare frequently needed \emph{facets}\footnote{\emph{R-46-CONSTRAINING-FACETS}} to drive user interfaces and validate input against simple conditions, including min/max value, regular expressions, string length - similar to XSD datatypes. 
+Constraining facets, to restrict datatypes of RDF literals, may be: \emph{xsd:length}, \emph{xsd:minLength}, \emph{xsd:maxLength}, \emph{xsd:pattern}, \emph{xsd:enumeration}, \emph{xsd:whiteSpace}, \\ \emph{xsd:maxInclusive}, \emph{xsd:maxExclusive}, \emph{xsd:minExclusive}, \emph{xsd:minInclusive}, \emph{xsd:total} \emph{Digits}, \emph{xsd:fractionDigits}.
+
+\begin{itemize}
+	\item \textbf{{\em DISCO-C-XX:}} The abstract of a study (\emph{disco:purpose}) should have a minimum length (\emph{xsd:minInclusive}) of x. 
+\end{itemize}
+
+\subsection{Literal Pattern Matching}
+
+There are multiple use cases associated with the requirement to match literals according to given patterns\footnote{\emph{R-44-PATTERN-MATCHING-ON-RDF-LITERALS}}.
+
+\begin{itemize}
+	\item \textbf{{\em DISCO-C-XX:}} Each \emph{disco:Variable} of a given \emph{disco:LogicalDataSet} must have a given prefix for its variable name (\emph{skos:notation}). 
+\end{itemize}
+
+\subsection{Negative Literal Pattern Matching}
+
+\begin{itemize}
+	\item \textbf{{\em DISCO-C-XX:}} 
+\end{itemize}
+
+\subsection{Object Property Paths*}
+
+\emph{Object Property Paths}\footnote{\emph{R-55-OBJECT-PROPERTY-PATHS}} (or \emph{Object Property Chains} and in DL terminology \emph{complex role inclusion axiom} or \emph{role composition}) is the more complex form of sub properties. 
+This axiom states that, if an individual \emph{x} is connected by a sequence of object property expressions \emph{OPE$_1$, ..., OPE$_n$} with an individual \emph{y}, then \emph{x} is also connected with \emph{y} by the object property expression \emph{OPE}.  
+Role composition can only appear on the left-hand side of complex role inclusions \cite{Kroetzsch2012}.
+
+\subsection{Intersection*}
+
+\subsection{Disjunction*}
+
+A \emph{union class expression}\footnote{{\em R-17-DISJUNCTION-OF-CLASS-EXPRESSIONS} and {\em R-18-DISJUNCTION-OF-DATA-RANGES}} contains all individuals that are instances of at least one class $C_{i}$ for 1 $\leq$ i $\leq$ n. 
+A \emph{union data range} contains all tuples of literals that are contained in at least one data range $DR_{i}$ for 1 $\leq$ i $\leq$ n.
+Synonyms of {\em disjunction} are {\em union} and {\em inclusive or}.
+
+\begin{itemize}
+	\item \textbf{{\em DISCO-C-XX:}} 
+Only {\em disco:Variable}s or {\em disco:Question}s or {\em disco:RepresentedVariable}s can have {\em disco:concept} relationships to {\em skos:Concept}s.
+
+\begin{DL}
+Variable $\sqcup$ Question $\sqcup$ RepresentedVariable $\sqsubseteq$ $\forall$ concept.Concept \\
+\end{DL}
+\end{itemize}
+
+
+
+
+
 
 \subsection{Unqualified Cardinality Restrictions}
 
@@ -281,44 +497,6 @@ There must be at least 1 {\em disco:universe} relationship from {\em disco:Studi
 Study $\sqcup$ StudyGroup $\sqsubseteq$ $\exists$ universe.Universe \\
 \end{DL}
 
-\subsection{Disjunction}
-
-A union class expression contains all individuals that are instances of at least one class $C_{i}$ for 1 $\leq$ i $\leq$ n. 
-A union data range contains all tuples of literals that are contained in the at least one data range $DR_{i}$ for 1 $\leq$ i $\leq$ n.
-Synonyms of {\em disjunction} are {\em union} and {\em inclusive or}\footnote{{\em R-17-DISJUNCTION-OF-CLASS-EXPRESSIONS} and {\em R-18-DISJUNCTION-OF-DATA-RANGES}}.
-\textbf{{\em DISCO-C-XX:}} 
-Only {\em disco:Variable}s or {\em disco:Question}s or {\em disco:RepresentedVariable}s can have {\em disco:concept} relationships to {\em skos:Concept}s.
-
-\begin{DL}
-Variable $\sqcup$ Question $\sqcup$ RepresentedVariable \\
-$\sqsubseteq$ $\forall$ concept.Concept \\
-\end{DL}
-		
-\subsection{Property Domains*}
-
-{\em Property Domains} ({\em domain restrictions on roles} in DL) restricts the domain of object and data properties.
-The purpose is to declare that a given property is associated with a class. 
-In OO terms this is the declaration of a member, field, attribute or association. 
-$\exists R. \top \sqsubseteq C$ is the object property restriction where $R$ is the object property (role) whose domain is restricted to concept $C$\footnote{{\em R-25-OBJECT-PROPERTY-DOMAIN} and {\em R-26-DATA-PROPERTY-DOMAIN}}.
-{\em Property Domain} constraints are defined for each Disco object and data property.
-\textbf{{\em DISCO-C-XX:}} 
-Only {\em disco:Question}s can have {\em disco:responseDomain} relationships.
-
-\begin{DL}
-$\exists$ responseDomain.$\top$ $\sqsubseteq$ Question 
-\end{DL}
-
-\subsection{Property Ranges*}
-
-{\em Property Range} ({\em range restrictions on roles} in DL) restricts the range of object and data properties.
-$\top \sqsubseteq \forall R . C$ is the range restriction to the object property $R$ (restricted by the concept $C$)\footnote{{\em R-28-OBJECT-PROPERTY-RANGE} and {\em R-35-DATA-PROPERTY-RANGE}}. 
-\textbf{{\em DISCO-C-XX:}} 
-{\em disco:caseQuantity} relationships can only point to literals of the datatype {\em xsd:nonNegativeInteger}.
-
-\begin{DL}
-$\top$ $\sqsubseteq$ $\forall$ caseQuantity.nonNegativeInteger \\
-\end{DL}
-
 \subsection{Class-Specific Property Ranges}		
 
 {\em Class-Specific Property Range} restricts the range of object and data properties for individuals within a specific context (e.g. class, shape, application profile).
@@ -328,72 +506,6 @@ Only {\em disco:Question}s can have {\em disco:questionText} relationships to li
 
 \begin{DL}
 $\neg$Question $\sqsubseteq$ $\neg\exists$ questionText.langString
-\end{DL}
-
-\subsection{Class Equivalence*}
-
-{\em Class Equivalence} asserts that two concepts have the same instances.
-While synonyms are an obvious example of equivalent concepts, in practice one more
-often uses concept equivalence to give a name to complex expressions \cite{Kroetzsch2012}.
-Concept equivalence is indeed subsumption from left and right ($A \sqsubseteq B$ and $B \sqsubseteq A$ implies $A \equiv B$)\footnote{{\em R-3-EQUIVALENT-CLASSES}}.
-\textbf{{\em DISCO-C-XX:}}
-All {\em sio:SIO\_000367}s must also be {\em disco:Variable}s.
-
-\begin{DL}
-Variable $\equiv$ SIO\_000367
-\end{DL}
-
-The Semanticscience Integrated Ontology (SIO)\footnote{https://code.google.com/p/semanticscience/wiki/SIO} provides a simple, integrated ontology of types and relations for rich description of objects, processes and their attributes.
-{\em sio:SIO\_000367} is a variable defined as a value that may change within the scope of a given problem or set of operations.
-Thus, {\em sio:SIO\_000367} is equivalent to {\em disco:Variable}.
-
-\subsection{Sub Properties*}
-
-{\em Sub Properties} state that the property P1 is a sub property of the property P2 - that is, if an individual x is connected by P1 to an individual or a literal y, then x is also connected by P2 to y. 
-\textbf{{\em DISCO-C-XX:}}
-If an individual x is connected by {\em disco:fundedBy} to an individual y, then x is also connected by {\em dcterms:contributor} to y. 
-
-\begin{DL}
-fundedBy $\sqsubseteq$ contributor 
-\end{DL}
-
-\subsection{Disjoint Classes}
-
-{\em Disjoint Classes} state that all of the classes are pairwise disjoint; 
-that is, no individual can be at the same time an instance of these disjoint classes\footnote{{\em R-7-DISJOINT-CLASSES}}.
-\textbf{{\em DISCO-C-XX:}} 
-All Disco classes are defined to be pairwise disjoint.
-The following DL statements holds for each pair of Disco classes:
-
-\begin{DL}
-Study $\sqcap$ Variable $\sqsubseteq$ $\perp$\\
-\end{DL}
-
-\subsection{Asymmetric Object Properties}
-
-A property is asymmetric if it is disjoint from its own inverse \cite{Kroetzsch2012}.
-An object property asymmetry axiom states that the object property OP is asymmetric - that is, if an individual x is connected by OP to an individual y, then y cannot be connected by OP to x\footnote{{\em R-62-ASYMMETRIC-OBJECT-PROPERTIES}}. 
-\textbf{{\em DISCO-C-XX:}} 
-A {\em disco:Variable} may be based on a {\em disco:RepresentedVariable}.
-A {\em disco:RepresentedVariable}, however, cannot be based on a {\em disco:Variable}.
-This is a kind of mistake may occur as a semantically equivalent object property for the other direction may also be possible ({\em disco:basisOf}).
-
-\begin{DL}
-$basedOn \sqcap basedOn^{-} \sqsubseteq \bot$ 
-\end{DL}
-
-\subsection{Class-Specific Irreflexive Object Properties}
-
-A property is irreflexive if it is never locally reflexive \cite{Kroetzsch2012}.
-An object property irreflexivity axiom states that the object property OP is irreflexive - that is, no individual is connected by OP to itself. 
-\textbf{{\em DISCO-C-XX:}}
-Within the Disco context, {\em skos:Concept}s cannot be related via the object property {\em skos:boader} to themselves (DL: Concept $\sqsubseteq$ $\neg$$\exists$ broader.Self).
-
-\textbf{{\em DISCO-C-XX:}}
-Within the Disco context, {\em skos:Concept}s cannot be related via the object property {\em skos:narrower} to themselves. 
-
-\begin{DL}
-Concept $\sqsubseteq$ $\neg$$\exists$ narrower.Self. 
 \end{DL}
 
 \subsection{Context-Specific Exclusive OR of Property Groups}
@@ -515,13 +627,7 @@ It has to be ensured, e.g., that a date is really a date, or that a xsd:nonNegat
 \textbf{{\em DISCO-C-XX:}}
 Check if literal values of the property {\em disco:startDate} are really of the datatype {\em xsd:date}(not expressible in DL).
 
-\subsection{Equivalent Properties}
-
 \subsection{Functional Properties}
-
-\subsection{Data Property Facets}
-
-xsd:length of disco:purpose
 
 \subsection{Hierarchies}
 
